--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
       <!-- Quote -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote"
-          >What you are is what you have been. What you'll be is what you do
-          now.</span
-        >
+        <span id="quote"></span>
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">Buddha</span>
+        <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
@@ -37,6 +34,9 @@
         </button>
       </div>
     </div>
+
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
 
     <!-- example of icon <i class="fab fa-500px"></i> -->
     <!-- Script -->
